wildlife-blog: changed directory

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header nav ul{
 }
 
 #keyVisual{
-    background-image: url(/assets/david-griffiths-iYGE0T3fYas-unsplash.jpg);
+    background-image: url(./assets/david-griffiths-iYGE0T3fYas-unsplash.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
