--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 
 body{
     font-family: 'Roboto', sans-serif;
+    background-color: #f5f2ea;
+    color: #503629;
 }
 
 h1{
@@ -19,12 +21,71 @@ header nav{
     justify-content: space-between;
     align-items: center;
     padding: 20px 30px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 2;
+    background-color: #f5f2ea;
 }
 
 header nav ul{
     list-style-type: none;
     display: flex;
-    column-gap: 20px;
+    gap: 5px;
+
+}
+
+header nav ul li{
+    cursor: pointer;
+    transition: box-shadow 0.8s ease;
+    text-align: center;
+    padding: 8px 20px;
+}
+
+header nav ul li:hover{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+form{
+    max-width: 300px;
+    margin: 0 auto;
+    display: block;
+    font-size: 32px;
+    position: relative;
+    height: 40px;
+    margin-top: 90px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #503629;
+}
+
+button{
+    cursor: pointer;
+}
+
+.kv-input{
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    border: none;
+    display: block;
+    background-color: #f5f2ea;
+    color: #503629;
+    font-size: 18px;
+}
+
+.kv-input:focus{
+    outline: none;
+}
+
+.btn-search{
+    position: absolute;
+    width: 39px;
+    height: 39px;
+    right: 0;
+    top: 0;
+    border: none;
+    background-color: #f5f2ea;
+    color: #503629;
 }
 
 #keyVisual{
@@ -42,17 +103,82 @@ header nav ul{
     position: absolute;
     right: 20px;
     bottom: 30px;
-    width: 650px;
+    width: 350px;
     animation: walking 10s linear infinite;
 }
 
 .quote-container{
-    font-size: 36px;
-    max-width: 800px;
+    font-size: 24px;
+    max-width: 450px;
+}
+
+section{
+    padding: 40px 50px;
+}
+
+.goal-container{
+    display: flex;
+    justify-content: flex-start;
+    background-color: #fff;
+}
+
+.goal-img{
+    width: 100%;
+    max-width: 300px;
+    height: 100%;
+    background-size: cover;
+}
+
+.goals-content{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    padding: 15px;
+}
+h2{
+    margin-bottom: 20px;
+}
+
+.images-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.image-container{
+    max-width: 300px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.image-container img{
+    width: 100%;
+}
+
+.image-container-text{
+    padding: 15px;
 }
 
 @keyframes walking {
     100%{
         right: 140px;
+    }
+}
+
+@media (max-width: 750px) {
+    section{
+        padding: 40px 10px;
+    }
+    .goal-container{
+        flex-direction: column;
+        align-items: center;
+    }
+    .goals-content h2{
+        text-align: center;
+        width: 100%;
     }
 }
